--- a/public/assets/css/shortcodes.css
+++ b/public/assets/css/shortcodes.css
@@ -3776,7 +3776,7 @@ section.today-picks {
     padding: 75px 0 80px;
 }
 .tf-item-details {
-    padding-bottom: 0;
+    padding-bottom: 100px;
     margin-bottom: -7px;
 }
 
