--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3848,3 +3848,8 @@ a {
 .is_dark .ui-404__content button:hover {
     color: #14141f;
 }
+.provider-button{
+    width: 100%;
+    height: 30px;
+    border-radius: 0px;
+}
