--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1907,6 +1907,7 @@ header {
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
+    gap: 10px;
 }
 
 #site-logo-inner {
