--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -599,6 +599,12 @@
     #footer.style-2,
     #footer {
         padding: 70px 0px !important;
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        height: 100px;
+        width: 100%;
+        overflow: hidden;
     }
 
     .tf-section.live-auctions.style2 {
